--- a/src/Components/Post.module.css
+++ b/src/Components/Post.module.css
@@ -114,8 +114,13 @@
     cursor: pointer;
   
     transition: background-color 0.1s;
+   
   }
   
   .commentForm button[type="submit"]:hover {
     background: var(--green-300);
+  }
+
+  .commentList {
+    margin-top: 2rem;
   }
