--- a/src/global.css
+++ b/src/global.css
@@ -11,6 +11,11 @@
     --green-500: #00875f;
     --green-300: #00B37E;
   }
+:focus {
+    outline: transparent;
+    box-shadow: 0 0 0 2px var(--green-500);
+}
+
 
 * {
     margin: 0;
