--- a/src/Components/Comment.module.css
+++ b/src/Components/Comment.module.css
@@ -74,5 +74,14 @@
   }
   
   .commentBox footer button:hover {
-    
+    color: var(--green-300);
+  }
+
+  .commentBox footer button svg {
+    margin-right: 0.5rem;
+  }
+
+  .commentBox footer button span::before {
+    content: "\2022";
+    padding: 0 0.25rem;
   }
